<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_randonaut"
            android:icon="@drawable/owl"
            android:title="@string/menu_randonaut" />
        <item
            android:id="@+id/nav_attractors"
            android:icon="@drawable/robot"
            android:title="@string/menu_bot" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/magnet"
            android:title="@string/menu_myAttractors" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/account"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
        </menu>
    </item>

</menu>
